--- a/src/app/views/employees/employee-view/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-details.component.html
@@ -8,36 +8,36 @@
     <!-- end sonarLint -->
 
     <!-- data employee-->
-    <ng-container *ngIf="employee() && !loadingEmployee()">
+    <ng-container *ngIf="employeeSelected() && !loadingEmployee()">
       <tbody>
         <tr>
           <td>Nombre</td>
-          <td>{{ employee()?.firstName }}</td>
+          <td>{{ employeeSelected()?.firstName }}</td>
         </tr>
         <tr>
           <td>Apellidos</td>
-          <td>{{ employee()?.lastName }}</td>
+          <td>{{ employeeSelected()?.lastName }}</td>
         </tr>
         <tr>
           <td>Email</td>
-          <td>{{ employee()?.email }}</td>
+          <td>{{ employeeSelected()?.email }}</td>
         </tr>
         <tr>
           <td>Teléfono</td>
-          <td>{{ employee()?.phoneNumber }}</td>
+          <td>{{ employeeSelected()?.phoneNumber }}</td>
         </tr>
         <tr>
           <td>Cuenta activa</td>
           <td>
             <span class="d-flex">
               <span>
-                <span [innerHTML]="employee()?.active | boolToIcon"></span>
+                <span [innerHTML]="employeeSelected()?.active | boolToIcon"></span>
               </span>
 
               <!-- activar o desactivar cuenta -->
               <ng-container *ngIf="canUpdateStates">
                 <span class="ms-auto">
-                  <ng-container *ngIf="employee()?.active">
+                  <ng-container *ngIf="employeeSelected()?.active">
                     <aw-btn-loading
                       (click)="handleDeactivateEmployee()"
                       [loading]="loadingUpdateActive"
@@ -45,7 +45,7 @@
                       btnClass="btn btn-sm btn-outline-danger ms-4"></aw-btn-loading>
                   </ng-container>
 
-                  <ng-container *ngIf="!employee()?.active">
+                  <ng-container *ngIf="!employeeSelected()?.active">
                     <aw-btn-loading
                       (click)="handleActivateEmployee()"
                       [loading]="loadingUpdateActive"
@@ -61,12 +61,12 @@
         <tr>
           <td>Invitación aceptada</td>
           <td>
-            <span [innerHTML]="employee()?.emailConfirmed | boolToIcon"></span>
+            <span [innerHTML]="employeeSelected()?.emailConfirmed | boolToIcon"></span>
           </td>
         </tr>
         <tr>
           <td>Fecha de ingreso</td>
-          <td>{{ employee()?.entryDate | datetime: dateShort }}</td>
+          <td>{{ employeeSelected()?.entryDate | datetime: dateShort }}</td>
         </tr>
         <tr>
           <td>Roles</td>
@@ -74,7 +74,7 @@
             <span class="d-flex">
               <span>
                 <ng-container *ngIf="!loadingEmployeeRoles()">
-                  <span class="badge rounded-pill bg-success ms-1" *ngFor="let role of employeeRoles()">
+                  <span class="badge rounded-pill bg-success ms-1" *ngFor="let role of employeeSelectedRoles()">
                     {{ roleToHumanReadable(role.name) }}
                   </span>
                 </ng-container>
@@ -110,7 +110,7 @@
     <!-- end data employee-->
 
     <!-- no data -->
-    <ng-container *ngIf="!employee() && !loadingEmployee()">
+    <ng-container *ngIf="!employeeSelected() && !loadingEmployee()">
       <tbody>
         <tr>
           <td colspan="100%" class="text-center">
