Renombrado handleFilterChange a handleClickClean

--- a/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
@@ -9,7 +9,7 @@
     <aw-table-input-search
       [tableHeaderConfig]="tableHeaderConfig"
       [apiResult]="apiResult"
-      (clickFiltering)="handleFilterChange($event)"></aw-table-input-search>
+      (clickClean)="handleClickClean($event)"></aw-table-input-search>
   </span>
 </div>
 <!-- end filter -->
