--- a/src/app/views/employees/employee-view/employee-tasks/employee-tasks.component.html
+++ b/src/app/views/employees/employee-view/employee-tasks/employee-tasks.component.html
@@ -9,7 +9,7 @@
     <aw-table-input-search
       [tableHeaderConfig]="tableHeaderConfig"
       [apiResult]="apiResult"
-      (clickFiltering)="handleFilterChange($event)"></aw-table-input-search>
+      (clickClean)="handleClickClean($event)"></aw-table-input-search>
   </span>
 </div>
 <!-- end filter -->
