--- a/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
@@ -5,7 +5,9 @@
 <!-- toolbar -->
 <div class="d-flex mb-2">
   <span class="me-auto">
-    <button (click)="handleChangeComponent()" class="btn btn-sm btn-outline-success">Añadir empleados</button>
+    <button (click)="handleChangeComponent()" class="btn btn-sm btn-outline-success">
+      <span class="fa-solid fa-user-plus"></span> Añadir empleados
+    </button>
   </span>
 
   <span>
