--- a/src/app/views/company-tasks/company-task-view/company-task-add-users/company-task-add-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-add-users/company-task-add-users.component.html
@@ -9,4 +9,9 @@
   </button>
 </div>
 
-<aw-dual-list-box [dualListBoxItems]="[]"></aw-dual-list-box>
+<ng-container *ngIf="dualListBoxItems.length">
+  <aw-dual-list-box
+    [dualListBoxItems]="dualListBoxItems"
+    [loading]="loading"
+    (saveChanges)="handleSaveChanges($event)"></aw-dual-list-box>
+</ng-container>
