--- a/src/app/views/company-tasks/company-task-view/company-task-add-users/company-task-add-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-add-users/company-task-add-users.component.html
@@ -1,9 +1,8 @@
-<hr />
-<div class="d-flex">
+<div class="d-flex my-3">
   <h5 class="m-auto">Añadir empleados</h5>
 </div>
 
-<div class="my-3">
+<div class="mb-3">
   <button (click)="handleChangeComponent()" class="btn btn-sm btn-outline-success">
     <span class="fa-solid fa-chevron-left"></span> Volver a empleados
   </button>
