--- a/src/app/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/breadcrumb/breadcrumb.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="breadcrumb.hasItems()">
-  <nav class="nav-breadcrumb" aria-label="breadcrumb">
-    <ol class="breadcrumb shadow-sm">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
       <li
         *ngFor="let bread of breadcrumb.getItems()"
         [ngClass]="{ active: bread.active }"
