--- a/src/app/views/employees/employee-invite/employee-invite.component.html
+++ b/src/app/views/employees/employee-invite/employee-invite.component.html
@@ -1,7 +1,12 @@
 <aw-view-base cssContent="container">
   <aw-card>
-    <h1>Invitar empleado</h1>
+    <h3>Invitar empleado</h3>
+    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
+  </aw-card>
 
+  <div class="mt-2"></div>
+
+  <aw-card>
     <!-- from-->
     <form (ngSubmit)="handleSubmit()" [formGroup]="form">
       <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
