--- a/src/app/views/employees/employee-list/employee-list.component.html
+++ b/src/app/views/employees/employee-list/employee-list.component.html
@@ -1,8 +1,12 @@
 <aw-view-base>
   <aw-card>
-    <h1>Lista de empleados</h1>
-    <hr />
+    <h3>Lista de empleados</h3>
+    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
+  </aw-card>
 
+  <div class="mt-2"></div>
+
+  <aw-card>
     <!-- toolbar -->
     <div class="d-flex mb-2">
       <span class="me-auto">
