--- a/src/app/views/employees/employee-list/employee-list.component.html
+++ b/src/app/views/employees/employee-list/employee-list.component.html
@@ -1,10 +1,5 @@
 <aw-view-base>
-  <aw-card>
-    <h3>Lista de empleados</h3>
-    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
-  </aw-card>
-
-  <div class="mt-2"></div>
+  <aw-view-header [breadcrumb]="breadcrumb">Lista de empleados</aw-view-header>
 
   <aw-card>
     <!-- toolbar -->
