--- a/src/app/components/views/view-base/view-base.component.scss
+++ b/src/app/components/views/view-base/view-base.component.scss
@@ -10,6 +10,10 @@
     transition: padding-left 0.3s ease;
     width: 100%;
 
+    .main-content {
+      min-height: 100vh;
+    }
+
     @media screen and (min-width: 768px) {
       padding-left: 260px;
     }
