--- a/src/app/views/company-tasks/company-task-create/company-task-create.component.html
+++ b/src/app/views/company-tasks/company-task-create/company-task-create.component.html
@@ -1,10 +1,5 @@
 <aw-view-base cssContent="container">
-  <aw-card>
-    <h3>Crear tarea</h3>
-    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
-  </aw-card>
-
-  <div class="mt-2"></div>
+  <aw-view-header [breadcrumb]="breadcrumb">Crear tarea</aw-view-header>
 
   <aw-card>
     <!-- form -->
