--- a/src/app/views/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/views/company-tasks/company-task-list/company-task-list.component.html
@@ -1,10 +1,5 @@
 <aw-view-base>
-  <aw-card>
-    <h3>Lista de tareas</h3>
-    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
-  </aw-card>
-
-  <div class="mt-2"></div>
+  <aw-view-header [breadcrumb]="breadcrumb">Lista de tarea</aw-view-header>
 
   <aw-card>
     <!-- toolbar -->
