--- a/src/app/views/employees/employee-edit/employee-edit.component.html
+++ b/src/app/views/employees/employee-edit/employee-edit.component.html
@@ -1,10 +1,5 @@
 <aw-view-base cssContent="container">
-  <aw-card>
-    <h3>Editar datos de empleado</h3>
-    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
-  </aw-card>
-
-  <div class="mt-2"></div>
+  <aw-view-header [breadcrumb]="breadcrumb">Editar datos de empleado</aw-view-header>
 
   <aw-card>
     <!-- form -->
