--- a/src/app/views/employees/employee-invite/employee-invite.component.html
+++ b/src/app/views/employees/employee-invite/employee-invite.component.html
@@ -1,10 +1,5 @@
 <aw-view-base cssContent="container">
-  <aw-card>
-    <h3>Invitar empleado</h3>
-    <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
-  </aw-card>
-
-  <div class="mt-2"></div>
+  <aw-view-header [breadcrumb]="breadcrumb">Invitar empleado</aw-view-header>
 
   <aw-card>
     <!-- from-->
