--- a/src/app/views/employees/employee-view/employee-view.component.html
+++ b/src/app/views/employees/employee-view/employee-view.component.html
@@ -18,7 +18,7 @@
             <tab heading="Tareas" #tabTasks="tab">
               <aw-employee-tasks *ngIf="tabTasks.active"></aw-employee-tasks>
             </tab>
-            <tab heading="Basic Title 1" #tabB="tab"> </tab>
+            <tab heading="Basic Title 1" #tabB="tab">Basic content 1</tab>
             <tab heading="Basic Title 2" #tabC="tab">Basic content 2</tab>
           </tabset>
         </div>
