Implementado parar un TimeControl

--- a/src/app/components/buttons/btn-loading/btn-loading.component.html
+++ b/src/app/components/buttons/btn-loading/btn-loading.component.html
@@ -1,4 +1,4 @@
-<button [class]="btnClass" [disabled]="loading" [type]="btnType">
+<button (click)="handleClick()" [class]="btnClass" [disabled]="loading" [type]="btnType">
   <ng-container *ngIf="!loading">
     <span>
       <ng-content></ng-content>
