--- a/src/app/views/company-tasks/company-task-view/company-task-add-users/company-task-add-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-add-users/company-task-add-users.component.html
@@ -8,9 +8,9 @@
   </button>
 </div>
 
-<ng-container *ngIf="dualListBoxItems.length">
+<ng-container *ngIf="htmlItemSelector.length">
   <aw-dual-list-box
-    [dualListBoxItems]="dualListBoxItems"
+    [htmlItemSelector]="htmlItemSelector"
     [loading]="loading"
     (saveChanges)="handleSaveChanges($event)"></aw-dual-list-box>
 </ng-container>
